<resources>
    <!--Strings for the app start up activity-->
    <string name="AppStartup_unlock_title">Fingerprint unlock</string>
    <string name="AppStartup_unlock_subtitle">Use your fingerprint to gain access</string>
    <string name="AppStartup_unlock_negative_button">Cancel</string>
    <string name="AppStartup_unlock_successful">Unlocked successfully</string>
    <string name="AppStartup_unlock_failed">Unlocking failed</string>
    <string name="AppStartup_unlock_error">There was an error when unlocking</string>
    <!--Strings for home page activity -->
    <string name="HomeActivity_app_name">Sobriety</string>
    <string name="HomeActivity_add_counter">Add new</string>
    <!--Strings for counter timer message in recycler view -->
    <string name="HomeActivity_counter_message_long">%1$d days, %2$d hours, %3$d minutes, and %4$d seconds.</string>

    <!--Strings for the add counter view -->
    <string name="AddCounterActivity_enter_counter_name">Choose the name of your counter:</string>
    <string name="AddCounterActivity_counter_name_input">Name…</string>
    <string name="AddCounterActivity_select_start_date">Select the start date:</string>
    <string name="AddCounterActivity_add_a_reason_for_sobriety">Add a reason for your sobriety (optional):</string>
    <string name="AddCounterActivity_add_a_reason_for_sobriety_hint">Enter reason here…</string>
    <string name="AddCounterActivity_cancel">Cancel</string>
    <string name="AddCounterActivity_submit">Submit</string>

    <!--Strings for the counter full screen view -->
    <string name="CounterViewActivity_counter_message_long">%1$d days, %2$d hours, %3$d minutes, and %4$d seconds.</string>
    <string name="CounterViewActivity_record_sobriety_message">Your record sobriety duration is %1$s</string>
    <string name="CounterViewActivity_current_sobriety_message">Your current sobriety duration is %1$s</string>
    <string name="CounterViewActivity_no_sobriety_reason_provided">You have not added a reason for your sobriety</string>
    <string name="CounterViewActivity_sobriety_reason">The reason for your sobriety is %1$s</string>
    <string name="CounterViewActivity_sobriety_reasons">Reasons for sobriety can be listed below, if you have not added any the edit button can be used to do this.</string>
    <string name="CounterViewActivity_edit_counter">Edit</string>
    <string name="CounterViewActivity_reset_counter">Reset</string>
    <string name="CounterViewActivity_delete_counter">Delete</string>

    <!--Strings for the edit counter view-->
    <string name="EditCounterActivity_add_sobriety_reason_hint">Add a sobriety reason…</string>
    <string name="EditCounterActivity_save_changes_button">Save</string>

    <!--Toast messages -->
    <string name="Toast_counter_deleted">%1$s was deleted.</string>
    <string name="Toast_counter_edited_successfully">The counter was updated successfully.</string>
    <string name="Toast_reset_cancelled">Counter was not reset.</string>
    <string name="Toast_counter_reset">Counter was reset successfully.</string>
    <string name="Toast_delete_cancelled">Counter was not deleted.</string>
    <string name="Settings_fingerprint_not_enabled">Fingerprint unlock couldn\'t be enabled</string>
    <string name="Backup_passphrase_not_set">Backup passphrase could not be set</string>

    <!-- Confirmation fragment messages -->
    <string name="ConfirmationFrgament_title_delete">Delete counter</string>
    <string name="ConfirmationFrgament_title_reset">Reset timer</string>
    <string name="ConfirmationFragment_delete">Are you sure you want to delete this counter?</string>
    <string name="ConfirmationFragment_reset">Are you sure you want to reset your progress on this counter?</string>
    <string name="ConfirmationFragment_confirm">Yes</string>
    <string name="ConfirmationFragment_cancel">No</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="security">Security</string>
    <string name="fingerprint_unlock">Fingerprint unlock</string>
    <string name="backup">Backup</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="source_code">Source code</string>

    <!-- Theme preferences -->
    <string name="system_default">System default</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>

    <!-- option descriptions -->
    <string name="fingerprint_unlock_description">Enable this option so that a fingerprint is required to unlock the app.</string>
    <string name="backup_prefs_description">Backup options</string>
    <string name="source_code_description">Follow this link to view the source code of this app.</string>
</resources>