<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/display">

        <ListPreference
            app:key="language"
            app:enabled="true"
            app:title="@string/language"
            app:icon="@drawable/ic_fas_globe"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="default"
            app:entries="@array/language"
            app:entryValues="@array/language_codes"/>

        <ListPreference
            app:enabled="true"
            app:key="theme_toggleable"
            app:title="@string/theme"
            app:icon="@drawable/ic_brush_black"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="SYSTEM"
            app:entries="@array/themes"
            app:entryValues="@array/themes_key"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security">
        <SwitchPreference
            app:key="fingerprint_lock_enabled"
            app:enabled="false"
            app:title="@string/fingerprint_unlock"
            app:icon="@drawable/ic_fingerprint_black"
            app:summary="@string/fingerprint_unlock_description"/>

        <Preference
            android:fragment="com.orangeelephant.sobriety.ui.fragments.preferences.BackupPreferencesFragment"
            app:title="@string/backup"
            app:icon="@drawable/ic_cloud_upload_outline_black"
            app:summary="@string/backup_prefs_description"
            app:enabled="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">
        <Preference
            app:key="app_version"
            app:selectable="false"
            app:enableCopying="false"
            app:title="@string/version"
            app:icon="@drawable/ic_tools_black"
            app:summary=""/>

        <Preference
            app:title="@string/source_code"
            app:icon="@drawable/ic_fas_code_branch"
            app:summary="@string/source_code_description">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/orange-elephant/sobriety" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>