<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display">

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/language"
            app:entryValues="@array/language_codes"/>

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/themes"
            app:entryValues="@array/themes"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security">
        <SwitchPreference
            app:key="fingerprint_lock_enabled"
            app:title="@string/fingerprint_unlock"
            app:summary="@string/fingerprint_unlock_description"/>
    </PreferenceCategory>
</PreferenceScreen>