<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/counterScreenToolbar"
        android:layout_width="396dp"
        android:layout_height="62dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CounterViewActivity_counter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/counterScreenToolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CounterViewActivity_counter_message_long"
                android:layout_width="323dp"
                android:layout_height="88dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="50dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CounterViewActivity_counter_name" />

            <TextView
                android:id="@+id/CounterViewActivity_record_sobriety_message"
                android:layout_width="322dp"
                android:layout_height="93dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CounterViewActivity_counter_message_long" />

            <TextView
                android:id="@+id/CounterViewActivity_sobriety_reason"
                android:layout_width="324dp"
                android:layout_height="82dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:textSize="24sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/CounterViewActivity_reset_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:onClick="onClickResetCounter"
        android:textColor="?android:textColorPrimary"
        android:text="@string/CounterViewActivity_reset_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/CounterViewActivity_delete_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="onClickDelete"
        android:textColor="?android:textColorPrimary"
        android:text="@string/CounterViewActivity_delete_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CounterViewActivity_reset_counter"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_counter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/edit_icon"
        android:enabled="true"
        android:onClick="onClickEditCounter"
        android:textColor="?android:textColorPrimary"
        android:text="@string/CounterViewActivity_edit_counter"
        app:layout_constraintEnd_toEndOf="@+id/counterScreenToolbar"
        app:layout_constraintTop_toTopOf="@+id/counterScreenToolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>